--- a/themes/edjopato-hugo-theme/assets/style/footer.scss
+++ b/themes/edjopato-hugo-theme/assets/style/footer.scss
@@ -1,13 +1,20 @@
 footer {
   background: linear-gradient(rgba(0,0,0,.8), transparent);
   opacity: 0.8;
-  padding: 3rem 1.5rem;
+  padding: 4rem 1rem 3rem;
   text-align: center;
 }
 
 footer, footer a {
   color: whitesmoke;
   text-shadow: 1px 1px 10px #000;
+}
+
+footer div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 1rem 0;
 }
 
 footer svg {
