--- a/themes/edjopato-hugo-theme/assets/style/pagination.scss
+++ b/themes/edjopato-hugo-theme/assets/style/pagination.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   margin: 0;
   margin-bottom: 2rem;
+  overflow-x: auto;
   padding: 0;
 }
 
